# DARCHIE

./: .gitignore  README.md  hello-world.py  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  compose.yml  (+3 more)
services/api/: README.md  pyproject.toml
services/api/app/: __init__.py  main.py  models.py  sql_fixtures.py  sql_sandbox.py  sql_store.py
services/api/app/api/: README.md  __init__.py  dependencies.py  exception_handlers.py  router.py
services/api/app/core/: README.md  __init__.py  config.py  database.py  errors.py  events.py  logging.py  runtime_bootstrap.py  security.py
services/api/app/modules/: README.md  __init__.py
services/api/app/modules/assessment_content_management/: README.md  router.py
services/api/app/modules/assessment_orchestration/: README.md  __init__.py  dependencies.py  errors.py  events.py  gating_service.py  models.py  policy_service.py  progression_service.py  repositories.py  router.py  service.py  state_machine.py
services/api/app/modules/identity_access/: README.md  auth_service.py  authorization_service.py  dependencies.py  errors.py  events.py  models.py  permissions.py  repositories.py  router.py  session_service.py  user_admin_service.py
services/api/app/modules/reporting_analytics/: README.md  dependencies.py  router.py
services/api/app/modules/response_capture/: README.md  __init__.py  artifact_service.py  dependencies.py  errors.py  events.py  models.py  repositories.py  router.py  service.py
services/api/app/routes/: sql.py
services/api/app/tests/: conftest.py
services/api/tests/: test_sql_module.py
(+265 files in other folders)
