[project]
name = "darchie-api"
version = "0.1.0"
description = "DARCHIE backend service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "fastapi>=0.116.1",
  "pydantic>=2.11.9",
  "psycopg[binary]>=3.2.10",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[tool.uv]
package = false
